# personal-medical-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: .env.example
deploy/systemd/: hermes-medical-telegram-cache-ingest.service  hermes-medical-telegram-cache-ingest.timer
docs/: ARCHITECTURE.md  BODY_PARAMETER_INDEXING_STATUS.md  CHANGE_MANAGEMENT.md  CURRENT_SYSTEM.md  DATA_MODEL.md  FULL_CONTENT_INDEXING.md  HONCHO_INTEGRATION.md  INSTALLATION_HISTORY.md  LLM_CONTEXT.md  OPERATIONS.md  ROADMAP.md  RUNBOOK.md  SAFETY_POLICY.md  SECURITY.md
ops/: server-layout.md
profiles/medical_agent/: PROFILE.md
profiles/medical_consultant/: PROFILE.md
samples/: README.md
src/hermes_medical_agent/: body_parameters.py  bot.py  cli.py  content_audit.py  parser.py  search_index.py  settings.py  storage.py  telegram_cache_ingest.py
tests/: test_parser.py  test_search_index.py  test_storage.py  test_systemd_units.py  test_telegram_cache_ingest.py
