[project]
name = "hermes-medical-agent"
version = "0.1.0"
description = "Telegram-first personal medical archive and retrieval agent for Hermes"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot>=21.10",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "pypdf>=5.1",
  "pillow>=11.0",
  "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
