[project]
name = "hermes-medical-agent"
version = "0.1.0"
description = "Hermes profile tools for a personal medical archive and timeline"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "pypdf>=5.1",
  "pillow>=11.0",
  "pytesseract>=0.3.13",
]

[project.scripts]
medical-agent = "hermes_medical_agent.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
